# alisaml

./: .gitignore  CMakeLists.txt  Makefile  README.md
DOCS/: doc.md
include-external/ooxi-xml.c/: xml.c
include-internal/: alisaml.c  alisaml.h  types.h
src/: main.c
src/internal/: alisaml.c  alisaml.h  mallocations.txt  types.h  xmlparser.c  xmlparser.h
src/utils/: alisaml.c  alisaml.h  types.h
